[package]
name = "simple_thread_pool"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple thread pool."
readme = "README.md"
keywords = ["thread","pool","thread-pool"]
categories = ["concurrency"]
authors = ["quyc07<quycsff@gmail.com>"]
repository = "https://github.com/quyc07/thread_pool"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
